# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  adu97iqtcibfnbvc5hnsvasaab9irqgn.darc  flake.nix  justfile  manifest
.beads/: interactions.jsonl  metadata.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  model_behavior.yml
.github/workflows/: ci.yml  deb-packages.yml  release.yml
crates/agents/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: doctor_commands.rs  hooks_commands.rs  main.rs  sandbox_commands.rs
crates/gateway/: Cargo.toml
crates/memory/: Cargo.toml
crates/plugins/: Cargo.toml
crates/tools/: Cargo.toml
crates/web/: Cargo.toml
docs/: streaming.md
docs/src/: SUMMARY.md  advanced-use-cases.md  architecture.md  authentication.md  comparison.md  configuration.md  docker.md  index.md  installation.md  integrations.md  quickstart.md  (+4 more)
flatpak/: org.moltbot.Moltis.yml
prompts/: session-2026-04-04-phase2-machines.md  session-2026-04-05-phase2-machine-normalization-session-payloads.md  session-2026-04-05-phase2-machine-posture-ui.md  session-2026-04-05-pr-review-followups-machine-normalization.md  session-2026-04-06-phase2-chat-runtime-normalization.md  session-2026-04-06-phase2-session-header-machines.md  session-2026-04-06-phase2-session-restore-normalization.md  session-2026-04-07-phase2-context-followup.md  session-2026-04-07-phase2-runtime-payload-normalization.md
scripts/: gpg-sign-release.sh  verify-release.sh
snap/: snapcraft.yaml
website/: ROADMAP.md  index.html
(+137 files in other folders)
